baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__10_formatter__array_map_throws.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
// === Array.map with throwing callback ===

// Pure map callback
function test_array_map_pure() -> int[] {
    let items: int[] = [1, 2, 3]
    items
        .map(
            (x) -> {
                x * 2
            },
        )
}

// Throwing map callback
function test_array_map_throwing() -> int[] {
    let items: int[] = [1, 2, 3]
    items
        .map(
            (x) -> {
                if (x == 2) {
                    throw "found two"
                }
                x * 2
            },
        )
}
