baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__10_formatter__basic.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== STRONG AST ERROR ===
Unexpected additional element at basic.baml:4:28
