baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__10_formatter__compose_hof.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== STRONG AST ERROR ===
Expected token/node of kind PARAMETER_LIST, but found GENERIC_PARAM_LIST at compose_hof.baml:4:17
