baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__10_formatter__explicit_param_throws.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== STRONG AST ERROR ===
Unexpected additional element at explicit_param_throws.baml:4:37
