baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__10_formatter__fn_decl_throws.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== STRONG AST ERROR ===
Expected token/node of kind LLM_FUNCTION_BODY or EXPR_FUNCTION_BODY, but found THROWS_CLAUSE at fn_decl_throws.baml:4:45
