baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__10_formatter__generic_stored_callback.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== STRONG AST ERROR ===
An element at generic_stored_callback.baml:4:14 was a token when it should have been a node.
